--- a/css/style.css
+++ b/css/style.css
@@ -275,33 +275,33 @@ nav ul li a:hover {
 }
 /* End Services */
 
-.contact .form {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  margin-top: 50px;
-  margin-bottom: 40px;
-  padding: 5px 100px;
-  width: 100%;
-}
-.contact .form,
-input,
-.contact .form textarea {
-  width: 100%;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 18px;
+/* Contact */
+.form {
+  margin-bottom: 30px;
   font-family: var(--font-1);
+  margin-top: 50px;
+  padding: 10px 25px;
 }
-
-.contact .form input {
+.form label {
+  font-weight: var(--font-semi-bold);
+}
+.form input {
   border: 1px solid var(--text-dark);
+}
+.form input,
+.form textarea {
+  width: 100%;
+  box-sizing: border-box;
+  margin: 12px 0;
+  border-radius: 5px;
+  padding: 8px 10px;
 }
 
 .btn-send {
   text-align: center;
   margin-top: 30px;
 }
+/* End Contact */
 
 /* Footer */
 .footer-list li {
